test/functions/shadowing/type-method-param-field.good
type-method-param-field.chpl:7: error: parenless proc redeclares the field 'x'
